# scheduler-class-assistant

./: Dockerfile  README.md  build.sh
Relatório/: comp.ipynb  relatorio.tex
back/: Makefile  algoritmo.ipynb  algoritmo.py  back.py  build_executables.py  genetic.py  integer_programming.py  requirements.txt  simplex.py  test.py
back/aux_files/: temp_course_data.xlsx  temp_student_data.xlsx
back/aux_files/simplex/: simplex_prof.ipynb
back/aux_files/simplex/Material_auxiliar/: Alunos_Codigo_projeto2.ipynb
back/simplex/: simplex.ipynb
dataset/: Dados_monitores.xlsx  classes_data_template.csv  classes_data_template.xlsx  course_data.xlsx  dados_template.xlsx  students_data.xlsx  students_data_template.csv  students_data_template.xlsx  template_disciplinas.xlsx
front/: package.json  pnpm-lock.yaml  vite.config.ts
front/src/: App.tsx  Test.tsx  main.tsx
front/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
front/src-tauri/capabilities/: default.json
front/src-tauri/src/: commands.rs  main.rs
front/src/components/: course-input.tsx  student-input.tsx
front/src/components/steps/: AlgorithmStep.tsx  CourseInputStep.tsx  ResultsStep.tsx  StudentInputStep.tsx  algorithm-step.tsx  results-step.tsx
front/src/components/ui/: stepper.tsx  toast.tsx  toaster.tsx
front/src/components/widgets/: course-input.tsx  data-table.tsx  example.tsx  import-test.tsx  stepper.tsx
front/src/components/widgets/data-table/: DataTable.tsx  ExportMenu.tsx  FileInput.tsx  FileUtils.ts  FilterDropdown.tsx  index.ts  types.ts
